# ConsoleChessCard

./: .gitignore  CMakeLists.txt  README.md
chat/: requirements.md
repositories/: CMakeLists.txt
repositories/inc/games/tic_tac_toe/: tic_tac_toe.h  tic_tac_toe_ai.h  tic_tac_toe_game.h
repositories/include/: game_base.h  game_manager.h  game_registry.h  repository_export.h  tic_tac_toe.h
repositories/src/: tic_tac_toe.cpp
repositories/src/core/: game_manager.cpp  game_registry.cpp
repositories/src/games/tic_tac_toe/: tic_tac_toe.cpp  tic_tac_toe_ai.cpp  tic_tac_toe_game.cpp
sandbox/: CMakeLists.txt  main.cpp
template/: template.txt
